# RayTracingPractice

./: CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  color.hpp  core.hpp  hittable.hpp  hittableList.hpp  interval.cpp  interval.hpp  main.cpp  material.hpp  ray.cpp  ray.hpp  vec3.cpp  vec3.hpp
src/Objects/: Sphere.hpp
